--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,11 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.4.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-messaging</artifactId>
+            <version>4.1.1.RELEASE</version>
+        </dependency>
         <!--For Spring Messaging End-->
 
         <dependency>
