--- a/resources/WEB-INF/classes/defaultEnhancedSnapshots.properties
+++ b/resources/WEB-INF/classes/defaultEnhancedSnapshots.properties
@@ -53,11 +53,12 @@ enhancedsnapshots.nginx.key.path = /etc/nginx/cert.key
 # volume type which will be used for temp volume creation
 enhancedsnapshots.default.tempVolumeType = gp2
 # iops per 1GB, applicable only for io1 temp volume type
-enhancedsnapshots.default.tempVolumeIopsPerGb = 30
+enhancedsnapshots.default.tempVolumeIopsPerGb = 50
 # voulume type which will be used for restore volume creation
 enhancedsnapshots.default.restoreVolumeType = gp2
 # iops per 1GB, applicable only for io1 restore volume type
-enhancedsnapshots.default.restoreVolumeIopsPerGb = 30
+enhancedsnapshots.default.restoreVolumeIopsPerGb = 50
+enhancedsnapshots.default.maxIopsPerGb = 50
 
 # Amazon S3 service root region
 amazon.s3.default.region=us-east-1
