--- a/WebContent/package.json
+++ b/WebContent/package.json
@@ -1,10 +1,42 @@
 {
   "name": "enhanced-snapshots",
   "version": "4.0.0",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "start http://localhost:8080/webpack-dev-server/ & webpack-dev-server",
+    "build": "NODE_ENV=production node node_modules/.bin/webpack -p && cp app/index.html dist/index.html"
+  },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-bower-concat": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-uglify": "^2.0.0"
+    "autoprefixer-loader": "^2.0.0",
+    "babel-core": "^5.8.38",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.1.2",
+    "babel-preset-latest": "^6.16.0",
+    "css-loader": "^0.19.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "json-loader": "^0.5.4",
+    "ng-cache-loader": "0.0.21",
+    "node-libs-browser": "^0.5.2",
+    "postcss-loader": "^1.1.0",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.12.4",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.14.1",
+    "ng-stomp": "~0.0.2",
+    "ng-tags-input": "3.0.0",
+    "babel-loader": "^5.4.2"
+  },
+  "dependencies": {
+    "angular": "~1.4.2",
+    "angular-awesome-slider": "~2.4.1",
+    "angular-bootstrap": "^0.12.2",
+    "angular-smart-table": "~2.1.1",
+    "angular-toastr": "~1.5.0",
+    "angular-ui-router": "~0.2.15",
+    "bootstrap": "~3.3.5",
+    "jquery": "^3.1.1",
+    "lodash": "4.15.0"
   }
 }
