--- a/WebContent/package.json
+++ b/WebContent/package.json
@@ -9,24 +9,25 @@
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
     "babel-core": "^5.8.38",
+    "babel-loader": "^5.4.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.1.2",
     "babel-preset-latest": "^6.16.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.19.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "json-loader": "^0.5.4",
     "ng-cache-loader": "0.0.21",
+    "ng-stomp": "~0.0.2",
+    "ng-tags-input": "3.0.0",
     "node-libs-browser": "^0.5.2",
     "postcss-loader": "^1.1.0",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.14.1",
-    "ng-stomp": "~0.0.2",
-    "ng-tags-input": "3.0.0",
-    "babel-loader": "^5.4.2"
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "angular": "~1.4.2",
