--- a/WebContent/package.json
+++ b/WebContent/package.json
@@ -24,7 +24,7 @@
     "node-libs-browser": "^0.5.2",
     "postcss-loader": "^1.1.0",
     "raw-loader": "^0.5.1",
-    "sockjs": "^0.3.18",
+    "resolve-url-loader": "^1.6.1",
     "style-loader": "^0.12.4",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
@@ -41,6 +41,8 @@
     "jquery": "^3.1.1",
     "lodash": "4.15.0",
     "ng-stomp": "0.0.2",
-    "ng-tags-input": "^3.0.0"
+    "ng-tags-input": "^3.0.0",
+    "sockjs-client": "^1.1.1",
+    "stompjs": "^2.3.3"
   }
 }
