[SNAP-401] - Archiving ability

--- a/resources/WEB-INF/classes/defaultEnhancedSnapshots.properties
+++ b/resources/WEB-INF/classes/defaultEnhancedSnapshots.properties
@@ -92,3 +92,9 @@ enhancedsnapshots.logs.broker.port = 61614
 enhancedsnapshots.logs.file = logs/catalina.out
 enhancedsnapshots.copycat.persist.path=${catalina.home}/temp
 enhancedsnapshots.copycat.port = 6442
+
+#S3 IA
+enhancedsnapshots.s3.rule.ia.names = blocks to IA,bucketinfo to IA,claims to IA,ddb to IA,files to IA
+enhancedsnapshots.s3.rule.ia.prefixes =blocks/,bucketinfo/,claims/,ddb/,files/
+enhancedsnapshots.s3.rule.ia.days = 30
+enhancedsnapshots.s3.ia.enabled = true
