[SNAP-570] - BE: add custom events notification

--- a/resources/WEB-INF/classes/defaultEnhancedSnapshots.properties
+++ b/resources/WEB-INF/classes/defaultEnhancedSnapshots.properties
@@ -98,3 +98,6 @@ enhancedsnapshots.s3.rule.ia.names = blocks to IA,bucketinfo to IA,claims to IA,
 enhancedsnapshots.s3.rule.ia.prefixes =blocks/,bucketinfo/,claims/,ddb/,files/
 enhancedsnapshots.s3.rule.ia.days = 30
 enhancedsnapshots.s3.ia.enabled = true
+
+#SNS
+enhancedsnapshots.sns.subject = EnhancedSnapshotsEvent
