SNAP-532: Consistent Snapshots. Init commit.
Change-Id: Iac7e37386e65abfde6de76c4e93d924303eaf26f

--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,11 @@
             <artifactId>aws-java-sdk-elasticloadbalancing</artifactId>
             <version>${amazonaws.sdk.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-ssm</artifactId>
+            <version>${amazonaws.sdk.version}</version>
+        </dependency>
 
         <!--AWS dependencies-->
         <dependency>
